--- a/src/index.html
+++ b/src/index.html
@@ -2,57 +2,92 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../../../favicon.ico">
-
-  <title>Jessica Cockerell - Full Stack Web Developer</title>
-
-
-      <!-- Custom styles for this template -->
-      <link href="style.css" rel="stylesheet">
-
-      <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Jessica Cockerell - Web Developer</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
+<!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+  		<div class="container-fluid">
+  			<a class="navbar-brand" href="#"><img src="assets/images/jclogo.png"></a>
+  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+  			<span class="navbar-toggler-icon"></span>
+  		</button>
+  			<div class="collapse navbar-collapse" id="navbarResponsive">
+  				<ul class="navbar-nav ml-auto">
+  					<li class="nav-item active">
+  						<a class="nav-link" href="#">Home</a>
+  					</li>
+  					<li class="nav-item">
+  						<a class="nav-link" href="#">About</a>
+  					</li>
+  					<li class="nav-item">
+  						<a class="nav-link" href="#">Projects</a>
+  					</li>
+  					<li class="nav-item">
+  						<a class="nav-link" href="#">Resume</a>
+  					</li>
+  					<li class="nav-item">
+  						<a class="nav-link" href="#">Connect</a>
+  					</li>
+  				</ul>
 
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Portfolio</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  			</div>
+  		</div>
+  	</nav>
 
-  </header>
 
   <main role="main">
 
-    <section class="jumbotron text-center">
+    <!--- Image Slider -->
+  	<div id="slides" class="carousel slide" data-ride="carousel">
+  		<ul class="carousel-indicators">
+  			<li data-target="#slides" data-slide-to="0" class="active"></li>
+  			<li data-target="#slides" data-slide-to="1"></li>
+  			<li data-target="#slides" data-slide-to="2"></li>
+  		</ul>
+
+  		<div class="carousel-inner">
+  			<div class="carousel-item active">
+  				<img src="assets/images/morningwork.jpg" />
+  				<div class="carousel-caption">
+  					<h1 class="display-2">Bootstrap</h1>
+  					<h3>Complete Website Layout</h3>
+  					<button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
+  					<button type="button" class="btn btn-primary btn-lg">Get Started</button>
+  				</div>
+  			</div>
+  			<div class="carousel-item">
+  				<img src="assets/images/morningwork.jpg" />
+  			</div>
+  			<div class="carousel-item">
+  				<img src="assets/images/marb.jpg" />
+  			</div>
+  		</div>
+  	</div>
+
+
+    <!--- Jumbotron -->
+  	<div class="container-fluid">
+  		<div class="row jumbotron">
+  			<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+  				<p class="lead"> A web hosting service allows individuals and organizations to make their website accessible via the World Wide Web.</p>
+  			</div>
+  			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+  				<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+  			</div>
+  		</div>
+  	</div>
+
+    <!-- <section class="jumbotron text-center"> -->
       <!-- <div class="container">
         <h1 class="jumbotron-heading">Album example</h1>
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
@@ -61,9 +96,60 @@
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
         </p>
       </div> -->
-    </section>
+    <!-- </section> -->
 
+    <!--- Welcome Section -->
+<div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Be a Lifelong Learner.</h1>
+    </div>
+    <hr />
+    <div class="col-12">
+      <p class="lead">The most valuable advice I have ever received is to never stop learning. I consider myself a lifelong learner and I am passionate about discovering new technologies and seeing ideas come to life.</p>
+    </div>
+  </div>
+</div>
 
+<!--- Three Column Section -->
+<div class="container-fluid padding">
+  <div class="row text-center padding">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="fas fa-code"></i>
+      <h3>HTML5</h3>
+      <p>Built with the latest version of HTML, HTML5.</p>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="fas fa-bold"></i>
+      <h3>BOOTSTRAP</h3>
+      <p>Built with the latest version of Bootstrap, Bootstrap 4.</p>
+    </div>
+    <div class="col-sm-12 col-md-4">
+      <i class="fab fa-css3"></i>
+      <h3>CSS3</h3>
+      <p>Built with the latest version of CSS, CSS3.</p>
+    </div>
+  </div>
+  <hr class="my-4" />
+</div>
+
+<!--- Two Column Section -->
+<div class="container-fluid padding">
+  <div class="row padding">
+    <div class="col-lg-6">
+      <h2>SMU Coding Bootcamp Graduate</h2>
+      <p>I have a passion for developing applications and seeing projects go from the early concept phase all the way to launch and final product.</p>
+      <p>While my favorite part of the process involves the backend (especially mongo / databases) I also enjoy the visual aspects of the front end.</p>
+      <p>Pursuing my Bachelor of Science in Computer Information Systems / Computer Science. </p>
+      <br />
+      <a href="#" class="btn btn-primary">Learn More</a>
+    </div>
+    <div class="col-lg-6">
+      <img src="img/desk.png" class="img-fluid" />
+    </div>
+  </div>
+</div>
+<hr class="my-4" />
 
   </main>
 
