--- a/src/index.html
+++ b/src/index.html
@@ -2,165 +2,295 @@
 <html lang="en" dir="ltr">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Jessica Cockerell - Web Developer</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jessica Cockerell - Web Developer</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-<!-- Navbar -->
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-  		<div class="container-fluid">
-  			<a class="navbar-brand" href="#"><img src="assets/images/jclogo.png"></a>
-  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="assets/images/jclogo.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
   			<span class="navbar-toggler-icon"></span>
   		</button>
-  			<div class="collapse navbar-collapse" id="navbarResponsive">
-  				<ul class="navbar-nav ml-auto">
-  					<li class="nav-item active">
-  						<a class="nav-link" href="#">Home</a>
-  					</li>
-  					<li class="nav-item">
-  						<a class="nav-link" href="#">About</a>
-  					</li>
-  					<li class="nav-item">
-  						<a class="nav-link" href="#">Projects</a>
-  					</li>
-  					<li class="nav-item">
-  						<a class="nav-link" href="#">Resume</a>
-  					</li>
-  					<li class="nav-item">
-  						<a class="nav-link" href="#">Connect</a>
-  					</li>
-  				</ul>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Connect</a>
+          </li>
+        </ul>
 
-  			</div>
-  		</div>
-  	</nav>
+      </div>
+    </div>
+  </nav>
 
 
   <main role="main">
 
     <!--- Image Slider -->
-  	<div id="slides" class="carousel slide" data-ride="carousel">
-  		<ul class="carousel-indicators">
-  			<li data-target="#slides" data-slide-to="0" class="active"></li>
-  			<li data-target="#slides" data-slide-to="1"></li>
-  			<li data-target="#slides" data-slide-to="2"></li>
-  		</ul>
+    <div id="slides" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#slides" data-slide-to="0" class="active"></li>
+        <li data-target="#slides" data-slide-to="1"></li>
+        <li data-target="#slides" data-slide-to="2"></li>
+      </ul>
 
-  		<div class="carousel-inner">
-  			<div class="carousel-item active">
-  				<img src="assets/images/morningwork.jpg" />
-  				<div class="carousel-caption">
-  					<h1 class="display-2">Bootstrap</h1>
-  					<h3>Complete Website Layout</h3>
-  					<button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
-  					<button type="button" class="btn btn-primary btn-lg">Get Started</button>
-  				</div>
-  			</div>
-  			<div class="carousel-item">
-  				<img src="assets/images/morningwork.jpg" />
-  			</div>
-  			<div class="carousel-item">
-  				<img src="assets/images/marb.jpg" />
-  			</div>
-  		</div>
-  	</div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/morningwork.jpg" />
+          <div class="carousel-caption">
+            <h1 class="display-2">Jessica Cockerell</h1>
+            <h3>Full Stack Web Developer</h3>
+            <button type="button" class="btn btn-outline-light btn-lg">CONNECT</button>
+            <button type="button" class="btn btn-primary btn-lg">See Projects</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/morningwork.jpg" />
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/marb.jpg" />
+        </div>
+      </div>
+    </div>
 
 
     <!--- Jumbotron -->
-  	<div class="container-fluid">
-  		<div class="row jumbotron">
-  			<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-  				<p class="lead"> A web hosting service allows individuals and organizations to make their website accessible via the World Wide Web.</p>
-  			</div>
-  			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-  				<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
-  			</div>
-  		</div>
-  	</div>
+    <!-- <div class="container-fluid">
+      <div class="row jumbotron">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+          <p class="lead"> A web hosting service allows individuals and organizations to make their website accessible via the World Wide Web.</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+          <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+        </div>
+      </div>
+    </div> -->
 
-    <!-- <section class="jumbotron text-center"> -->
-      <!-- <div class="container">
-        <h1 class="jumbotron-heading">Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        </p>
-      </div> -->
-    <!-- </section> -->
 
     <!--- Welcome Section -->
-<div class="container-fluid padding">
-  <div class="row welcome text-center">
-    <div class="col-12">
-      <h1 class="display-4">Be a Lifelong Learner.</h1>
+    <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 class="display-4">Be a Lifelong Learner.</h1>
+        </div>
+        <hr />
+        <div class="col-12">
+          <p class="lead">The most valuable advice I have ever received is to never stop learning. I consider myself a lifelong learner and I am passionate about discovering new technologies and seeing ideas come to life.</p>
+        </div>
+      </div>
     </div>
-    <hr />
-    <div class="col-12">
-      <p class="lead">The most valuable advice I have ever received is to never stop learning. I consider myself a lifelong learner and I am passionate about discovering new technologies and seeing ideas come to life.</p>
-    </div>
-  </div>
-</div>
 
-<!--- Three Column Section -->
-<div class="container-fluid padding">
-  <div class="row text-center padding">
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <i class="fas fa-code"></i>
-      <h3>HTML5</h3>
-      <p>Built with the latest version of HTML, HTML5.</p>
+    <!--- Three Column Section -->
+    <div class="container-fluid padding">
+      <div class="row text-center padding">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <i class="fas fa-code"></i>
+          <h3>HTML5</h3>
+          <p>Built with the latest version of HTML, HTML5.</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <i class="fas fa-bold"></i>
+          <h3>BOOTSTRAP</h3>
+          <p>Built with the latest version of Bootstrap, Bootstrap 4.</p>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <i class="fab fa-css3"></i>
+          <h3>CSS3</h3>
+          <p>Built with the latest version of CSS, CSS3.</p>
+        </div>
+      </div>
+      <hr class="my-4" />
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <i class="fas fa-bold"></i>
-      <h3>BOOTSTRAP</h3>
-      <p>Built with the latest version of Bootstrap, Bootstrap 4.</p>
-    </div>
-    <div class="col-sm-12 col-md-4">
-      <i class="fab fa-css3"></i>
-      <h3>CSS3</h3>
-      <p>Built with the latest version of CSS, CSS3.</p>
-    </div>
-  </div>
-  <hr class="my-4" />
-</div>
 
-<!--- Two Column Section -->
-<div class="container-fluid padding">
-  <div class="row padding">
-    <div class="col-lg-6">
-      <h2>SMU Coding Bootcamp Graduate</h2>
-      <p>I have a passion for developing applications and seeing projects go from the early concept phase all the way to launch and final product.</p>
-      <p>While my favorite part of the process involves the backend (especially mongo / databases) I also enjoy the visual aspects of the front end.</p>
-      <p>Pursuing my Bachelor of Science in Computer Information Systems / Computer Science. </p>
-      <br />
-      <a href="#" class="btn btn-primary">Learn More</a>
+    <!--- Two Column Section -->
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-lg-6">
+          <h2>SMU Coding Bootcamp Graduate</h2>
+          <p>I have a passion for developing applications and seeing projects go from the early concept phase all the way to launch and final product.</p>
+          <p>While my favorite part of the process involves the backend (especially mongo / databases) I also enjoy the visual aspects of the front end.</p>
+          <p>Pursuing my Bachelor of Science in Computer Information Systems / Computer Science. </p>
+          <br />
+          <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+        <div class="col-lg-6">
+          <img src="assets/images/class.png" class="img-fluid" />
+        </div>
+      </div>
     </div>
-    <div class="col-lg-6">
-      <img src="img/desk.png" class="img-fluid" />
-    </div>
-  </div>
-</div>
-<hr class="my-4" />
+    <hr class="my-4" />
 
+    <!--- Fixed background -->
+    <figure>
+      <div class="fixed-wrap">
+        <div id="fixed">
+        </div>
+      </div>
+    </figure>
+
+    <!--- Upcoming Events Section -->
+
+    <button class="fun" data-toggle="collapse" data-target="#emoji">Add upcoming events and conferences meetups and groups here.</button>
+    <div id="emoji" class="collapse">
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif/panda.gif" />
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif/poo.gif" />
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif/unicorn.gif" />
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif/chicken.gif" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--- My Projects -->
+    <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 class="display-4">See my Projects</h1>
+        </div>
+        <hr />
+      </div>
+    </div>
+
+    <!--- Cards -->
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="img/team1.png" />
+            <div class="card-body">
+              <h4 class="card-title">Project 1</h4>
+              <p class="cardd-text">This is where I will put my first project. It is an awesome amazing Unicorn.</p>
+              <a href="#" class="btn btn-outline-secondary">More Info</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="img/team2.png" />
+            <div class="card-body">
+              <h4 class="card-title">Project 2</h4>
+              <p class="cardd-text">This is where I will put my second project. It is an awesome amazing Unicorn.</p>
+              <a href="#" class="btn btn-outline-secondary">More Info</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="img/team3.png" />
+            <div class="card-body">
+              <h4 class="card-title">Project 3</h4>
+              <p class="cardd-text">This is where I will put my third project. It is an awesome amazing Unicorn.</p>
+              <a href="#" class="btn btn-outline-secondary">More Info</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--- Two Column Section -->
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-lg-6">
+          <h2>What I'm Currently Working On</h2>
+          <p>Most of my current projects include React JS and Redux. I find React to be a very organized and streamlined approach to building web applications.</p>
+          <p>I have been focused on learning MERN stack development which includes MongoDB, Express, React JS and Node JS. </p>
+          <br />
+        </div>
+        <div class="col-lg-6">
+          <img src="img/bootstrap2.png" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+    <hr class="my-4" />
+
+    <!--- Connect -->
+    <div class="container-fluid padding">
+      <div class="row text-center padding">
+        <div class="col-12">
+          <h2>Connect</h2>
+        </div>
+        <div class="col-12 social padding">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-product-hunt"></i></a>
+          <a href="#"><i class="fas fa-envelope-square"></i></a>
+        </div>
+      </div>
+    </div>
   </main>
 
-  <footer class="text-muted">
-    <p>Put some content here.</p>
+  <!--- Footer -->
+  <footer>
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <img src="img/w3newbie.png" />
+          <hr class="light" />
+          <p>555-555-5555</p>
+          <p>email@myemail.com</p>
+          <p>100 Street Name</p>
+          <p>City, State, 00000</p>
+        </div>
+        <div class="col-md-4">
+          <hr class="light" />
+          <h5>Our Hours</h5>
+          <hr class="light" />
+          <p>Monday: 9am - 5pm</p>
+          <p>Saturday: 10am - 4pm</p>
+          <p>Sunday: Closed</p>
+        </div>
+        <div class="col-md-4">
+          <hr class="light" />
+          <h5>Service Area</h5>
+          <hr class="light" />
+          <p>City, State, 00000</p>
+          <p>City, State, 00000</p>
+          <p>City, State, 00000</p>
+          <p>City, State, 00000</p>
+        </div>
+      </div>
+      <div class="col-12 text-center">
+        <hr class="light-100" />
+        <h5>&copy; Jessica Cockerell 2018</h5>
+      </div>
+    </div>
   </footer>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
