--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,6 @@
             <a class="nav-link" href="#">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Resume</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#">Connect</a>
           </li>
         </ul>
@@ -186,31 +183,42 @@
       <div class="row padding">
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="img/team1.png" />
+            <img class="card-img-top" src="assets/images/landingmain.jpg" />
             <div class="card-body">
-              <h4 class="card-title">Project 1</h4>
-              <p class="cardd-text">This is where I will put my first project. It is an awesome amazing Unicorn.</p>
-              <a href="#" class="btn btn-outline-secondary">More Info</a>
+              <h4 class="card-title">Peak Destination Rentals: Streamline Your Next Ski Vacation</h4>
+              <p class="cardd-text">Peak Destination Rentals is an application designed to maximize your time on the slopes by improving the equipment rental process.
+                Built with MERN by a team of five developers. <br><br />
+                Create an account and rent skis, snowboards and other necessities.
+                Set your difficulty level in your user profile and only see equipment relevent to your skill level.
+                Currently designed to serve four locations in Colorado - perfect for the upcoming season!</p>
+              <a href="https://github.com/JP211/Peak-Destinations-Rentals" target=_blank class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="img/team2.png" />
+            <img class="card-img-top" src="assets/images/tindfur.png" />
             <div class="card-body">
-              <h4 class="card-title">Project 2</h4>
-              <p class="cardd-text">This is where I will put my second project. It is an awesome amazing Unicorn.</p>
-              <a href="#" class="btn btn-outline-secondary">More Info</a>
+              <h4 class="card-title">Tindfur - Matchmaking for Pets!</h4>
+              <p class="cardd-text">Tindfur is a match making application for finding a new pet friend based on the concept of the popular dating app - Tinder.
+                It can also be used by animal rescue organizations to rehome pets.
+                <br><br />
+                Tindfur is an application built by a team of four developers that uses node.js, express, handlebars.js and mySQL. To see a live demo of this project, check out the Github link below!</p>
+              <a href="https://github.com/JP211/Tindfur" target=_blank class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="img/team3.png" />
+            <img class="card-img-top" src="assets/images/wikivideo.png" />
             <div class="card-body">
-              <h4 class="card-title">Project 3</h4>
-              <p class="cardd-text">This is where I will put my third project. It is an awesome amazing Unicorn.</p>
-              <a href="#" class="btn btn-outline-secondary">More Info</a>
+              <h4 class="card-title">WikiVideo</h4>
+              <p class="cardd-text">Wikivideo was created by a team of four developers in order to add video to article searches.
+                By using the Youtube and Wikipedia APIs, we were able to create a more visual experience while searching for articles on a specific topic.
+                <br><br />
+                The homepage includes the top trending video on Youtube and the top trending videos for each search are also displayed with the article.
+              To see a live demo of this project, check out the Github link below!</p>
+              <a href="https://github.com/JP211/Wikivideo" target=_blank class="btn btn-outline-secondary">View Project</a>
             </div>
           </div>
         </div>
@@ -252,7 +260,7 @@
 
   <!--- Footer -->
   <footer>
-    <div class="container-fluid padding">
+    <!-- <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
           <img src="img/w3newbie.png" />
@@ -279,9 +287,9 @@
           <p>City, State, 00000</p>
           <p>City, State, 00000</p>
         </div>
-      </div>
+      </div> -->
       <div class="col-12 text-center">
-        <hr class="light-100" />
+        <!-- <hr class="light-100" /> -->
         <h5>&copy; Jessica Cockerell 2018</h5>
       </div>
     </div>
