--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#About">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#Projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Connect</a>
+            <a class="nav-link" href="#Connect">Connect</a>
           </li>
         </ul>
 
@@ -55,18 +55,18 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/images/morningwork.jpg" />
-          <div class="carousel-caption">
+          <!-- <div class="carousel-caption">
             <h1 class="display-2">Jessica Cockerell</h1>
             <h3>Full Stack Web Developer</h3>
             <button type="button" class="btn btn-outline-light btn-lg">CONNECT</button>
             <button type="button" class="btn btn-primary btn-lg">See Projects</button>
-          </div>
+          </div> -->
         </div>
         <div class="carousel-item">
-          <img src="assets/images/morningwork.jpg" />
+          <img src="assets/images/dallas.jpg" />
         </div>
         <div class="carousel-item">
-          <img src="assets/images/marb.jpg" />
+          <img src="assets/images/class.png" />
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
     <div class="container-fluid padding">
       <div class="row welcome text-center">
         <div class="col-12">
-          <h1 class="display-4">Be a Lifelong Learner.</h1>
+          <h1 class="display-4" id="About">Be a Lifelong Learner.</h1>
         </div>
         <hr />
         <div class="col-12">
@@ -99,7 +99,7 @@
     </div>
 
     <!--- Three Column Section -->
-    <div class="container-fluid padding">
+    <!-- <div class="container-fluid padding">
       <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6 col-md-4">
           <i class="fas fa-code"></i>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <hr class="my-4" />
-    </div>
+    </div> -->
 
     <!--- Two Column Section -->
     <div class="container-fluid padding">
@@ -129,10 +129,10 @@
           <p>While my favorite part of the process involves the backend (especially mongo / databases) I also enjoy the visual aspects of the front end.</p>
           <p>Pursuing my Bachelor of Science in Computer Information Systems / Computer Science. </p>
           <br />
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <!-- <a href="#" class="btn btn-primary">Learn More</a> -->
         </div>
         <div class="col-lg-6">
-          <img src="assets/images/class.png" class="img-fluid" />
+          <img src="assets/images/grad2.png" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
 
     <!--- Upcoming Events Section -->
 
-    <button class="fun" data-toggle="collapse" data-target="#emoji">Add upcoming events and conferences meetups and groups here.</button>
+    <!-- <button class="fun" data-toggle="collapse" data-target="#emoji">Add upcoming events and conferences meetups and groups here.</button>
     <div id="emoji" class="collapse">
       <div class="container-fluid padding">
         <div class="row text-center">
@@ -166,13 +166,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--- My Projects -->
     <div class="container-fluid padding">
       <div class="row welcome text-center">
         <div class="col-12">
-          <h1 class="display-4">See my Projects</h1>
+          <h1 class="display-4" id="Projects">Projects</h1>
         </div>
         <hr />
       </div>
@@ -229,13 +229,13 @@
     <div class="container-fluid padding">
       <div class="row padding">
         <div class="col-lg-6">
-          <h2>What I'm Currently Working On</h2>
+          <h2 id="Connect">What I'm Currently Working On</h2>
           <p>Most of my current projects include React JS and Redux. I find React to be a very organized and streamlined approach to building web applications.</p>
           <p>I have been focused on learning MERN stack development which includes MongoDB, Express, React JS and Node JS. </p>
           <br />
         </div>
         <div class="col-lg-6">
-          <img src="img/bootstrap2.png" class="img-fluid" />
+          <img src="assets/images/coding.jpg" class="img-fluid" />
         </div>
       </div>
     </div>
