--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="assets/images/jclogo.png"></a>
+      <a class="navbar-brand" href="#"><img id="logo" src="assets/images/logo.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
   			<span class="navbar-toggler-icon"></span>
   		</button>
